# enhanced-clipboard

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
i18n/: en-US.json  en.json  zh-CN.json  zh.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  db.rs  i18n.rs  lib.rs  main.rs  models.rs  services.rs  settings.rs  utils.rs  watcher.rs
src-tauri/src/db/: clipboard.rs  image_ingest_jobs.rs  settings.rs
src-tauri/src/services/: app_info.rs  effects.rs  entry.rs  entry_tags.rs  image_assets.rs  ingest.rs  jobs.rs  persisted_state.rs  pipeline.rs  projection.rs  prune.rs  query.rs  runtime.rs  search_preview.rs  settings.rs  view_events.rs
src-tauri/src/services/artifacts/: image.rs  maintenance.rs  mod.rs  store.rs
src-tauri/src/services/image_ingest/: capture.rs  cleanup.rs  mod.rs  recovery.rs  runner.rs  staging.rs  sweeper.rs
src-tauri/src/tests/: database_tests.rs  entry_service_tests.rs  image_asset_service_tests.rs  ingest_service_tests.rs  mod.rs  model_metadata_tests.rs  persisted_state_service_tests.rs  projection_tests.rs  query_service_tests.rs  runtime_service_tests.rs  search_preview_tests.rs  settings_service_tests.rs  settings_store_tests.rs  support.rs  utils_string_tests.rs  view_events_tests.rs
src-tauri/src/utils/: clipboard.rs  hotkey.rs  image.rs  logging.rs  os.rs  secure.rs  string.rs  window.rs
src-tauri/tests/: database_tests.rs  entry_service_tests.rs  image_asset_service_tests.rs  ingest_service_tests.rs  model_metadata_tests.rs  persisted_state_service_tests.rs  projection_tests.rs  query_service_tests.rs  runtime_service_tests.rs  search_preview_tests.rs  settings_service_tests.rs  settings_store_tests.rs  utils_string_tests.rs  view_events_tests.rs
src-tauri/tests/common/: mod.rs
(+85 files in other folders)
