[package]
name = "enhanced-clipboard"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "enhanced_clipboard_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
arboard = { version = "3", features = ["image-data"] }
clipboard-master = "3"
sha2 = "0.10"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
tauri-plugin-single-instance = "2"
sys-locale = "0.3"
keyring = { version = "3", features = ["windows-native"] }
getrandom = "0.2"
log = "0.4"
include_dir = "0.7"

[profile.release]
opt-level     = "z"  # 以体积为优化目标
lto           = true  # 链接时优化，消除跨 crate 死代码
codegen-units = 1     # 单编译单元，配合 LTO 效果最佳
panic         = "abort" # 去掉 panic unwinding 代码
strip         = true  # 剥除调试符号

[target.'cfg(windows)'.dependencies]
# 捕获前台窗口进程名（来源）所需的 Win32 API
clipboard-win = { version = "5.4.1", features = ["std"] }
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }
